// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemedText applies custom colors correctly 1`] = `
<Text
  style={
    [
      {
        "color": "#ff0000",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Colored text
</Text>
`;

exports[`ThemedText renders default text correctly 1`] = `
<Text
  style={
    [
      {
        "color": "#000000",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Default text
</Text>
`;

exports[`ThemedText renders link text correctly 1`] = `
<Text
  style={
    [
      {
        "color": "#000000",
      },
      undefined,
      undefined,
      undefined,
      undefined,
      {
        "color": "#0a7ea4",
        "fontSize": 16,
        "lineHeight": 30,
      },
      undefined,
    ]
  }
>
  Link text
</Text>
`;

exports[`ThemedText renders subtitle text correctly 1`] = `
<Text
  style={
    [
      {
        "color": "#000000",
      },
      undefined,
      undefined,
      undefined,
      {
        "fontSize": 20,
        "fontWeight": "bold",
      },
      undefined,
      undefined,
    ]
  }
>
  Subtitle text
</Text>
`;

exports[`ThemedText renders title text correctly 1`] = `
<Text
  style={
    [
      {
        "color": "#000000",
      },
      undefined,
      {
        "fontSize": 32,
        "fontWeight": "bold",
        "lineHeight": 32,
      },
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Title text
</Text>
`;

exports[`ThemedText respects dark theme 1`] = `
<Text
  style={
    [
      {
        "color": "#ffffff",
      },
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Dark theme text
</Text>
`;
